--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf
 
-font_family      FiraCode NF
+font_family      Jetbrains Mono
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
