--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -153,6 +153,7 @@ map super+w             send_text all :bd!\r
 map super+left          send_text all :cprev\r
 map super+right         send_text all :cnext\r
 map super+e             send_text all \x20E2E
+map shift+enter         send_text all \x20enter
 
 
 # Window management
