--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -160,8 +160,8 @@ map shift+enter         send_text all \x20enter
 map super+n             new_os_window
 
 # Tab management
-map ctrl+shift+l        next_tab
-map ctrl+shift+h        previous_tab
+map super+l        next_tab
+map super+h        prev_tab
 map super+t             new_tab
 map super+shift+w        close_tab
 map super+1 goto_tab 1
