--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -146,6 +146,9 @@ map shift+insert        paste_from_selection
 
 # Neovim
 map super+,             send_text all \x20vrc
+map ctrl+,              send_text all \x20comma
+map ctrl+m              send_text all \x20m
+map super+d             send_text all \x20diag
 map super+/             send_text all gc
 map super+j             send_text all \x20J
 map alt+enter           send_text all \x20qf
