--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -163,10 +163,10 @@ map shift+enter         send_text all \x20enter
 map super+n             new_os_window
 
 # Tab management
-map super+l        next_tab
-map super+h        prev_tab
-map super+t             new_tab
-map super+shift+w        close_tab
+map super+l             next_tab
+map super+h             prev_tab
+map super+t             new_tab_with_cwd
+map super+shift+w       close_tab
 map super+1 goto_tab 1
 map super+2 goto_tab 2
 map super+3 goto_tab 3
