--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -16,7 +16,7 @@ error_symbol = "[\\$](bold red)"
 # add_newline = false
 
 [directory]
-style = "bg:#D16969 fg:#000000"
+style = "bg:#D16969 fg:#ffffff"
 format = "[ $path ]($style)"
 truncation_length = 1
 truncation_symbol = "…/"
@@ -36,9 +36,9 @@ truncation_symbol = "…/"
 
 [git_branch]
 symbol = ""
-style = "bg:#608B4E fg:#000000"
-format = '[[ $symbol $branch ](bg:#608B4E fg:#000000)]($style)'
+style = "bg:#608B4E fg:#ffffff"
+format = '[[ $symbol $branch ](bg:#608B4E fg:#ffffff)]($style)'
 
 [git_status]
-style = "bg:#608B4E fg:#000000"
-format = '[[($conflicted$deleted$renamed$modified$staged$untracked$ahead_behind )](bg:#608B4E fg:#000000)]($style)'
+style = "bg:#608B4E fg:#ffffff"
+format = '[[($conflicted$deleted$renamed$modified$staged$untracked$ahead_behind )](bg:#608B4E fg:#ffffff)]($style)'
