--- a/winget.yaml
+++ b/winget.yaml
@@ -100,6 +100,7 @@ properties:
       settings:
         id: CoreyButler.NVMforWindows
         source: winget
+        version: "1.1.11"
     - resource: PSDscResources/Script
       id: node-init
       directives:
@@ -113,8 +114,8 @@ properties:
         TestScript:
           return $false
         SetScript: |
-          nvm install 18
-          nvm use 18
+          & $HOME\AppData\Roaming\nvm\nvm.exe install 18
+          & $HOME\AppData\Roaming\nvm\nvm.exe use 18
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       id: bat
       directives:
