--- a/winget.yaml
+++ b/winget.yaml
@@ -140,6 +140,16 @@ properties:
       settings:
         id: Rustlang.Rust.MSVC
         source: winget
+    - resource: PSDscResources/Environment
+      directives:
+        description: Add Cargo to path
+        dependsOn:
+          - rust
+      settings:
+        Name: Path
+        Path: true
+        Value: |
+          %UserProfile%\.cargo\bin
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       id: jq
       directives:
@@ -171,5 +181,45 @@ properties:
         allowPrerelease: true
       settings:
         id: ajeetdsouza.zoxide
+        source: winget
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: toolbox
+      directives:
+        description: Install Jetbrains Toolbox
+        allowPrerelease: true
+      settings:
+        id: JetBrains.Toolbox
+        source: winget
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: vscode
+      directives:
+        description: Install vscode
+        allowPrerelease: true
+      settings:
+        id: Microsoft.VisualStudioCode
+        source: winget
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: dotnet8
+      directives:
+        description: Install dotnet 8
+        allowPrerelease: true
+      settings:
+        id: Microsoft.DotNet.SDK.8
+        source: winget
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: dotnet6
+      directives:
+        description: Install dotnet 6
+        allowPrerelease: true
+      settings:
+        id: Microsoft.DotNet.SDK.6
+        source: winget
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: postman
+      directives:
+        description: Install Postman
+        allowPrerelease: true
+      settings:
+        id: Postman.Postman
         source: winget
   configurationVersion: 0.2.0
