--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,7 +19,7 @@ bind-key -n M-3 select-window -t 3
 bind-key -n M-3 select-window -t 4
 bind-key -n M-3 select-window -t 5
 
-set -g @plugin 'khanghh/tmux-dark-plus-theme'
+set -g @plugin 'catppuccin/tmux#latest'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
