--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,11 +1,12 @@
+palette = "catppuccin_mocha"
 command_timeout = 1000
 format = """
 $directory\
-[](fg:#D16969 bg:#608B4E)\
+[](fg:#f38ba8 bg:#a6e3a1)\
 $git_branch\
 $git_status\
-[](fg:#608B4E bg:#608B4E)\
-[ ](fg:#608B4E)
+[](fg:#a6e3a1 bg:#a6e3a1)\
+[ ](fg:#a6e3a1)
 $character"""
 
 [character] # The name of the module we are configuring is "character"
@@ -16,7 +17,7 @@ error_symbol = "[\\$](bold red)"
 # add_newline = false
 
 [directory]
-style = "bg:#D16969 fg:#ffffff"
+style = "bg:#f38ba8 fg:#1e1e2e"
 format = "[ $path ]($style)"
 truncation_length = 1
 truncation_symbol = "…/"
@@ -36,9 +37,37 @@ truncation_symbol = "…/"
 
 [git_branch]
 symbol = ""
-style = "bg:#608B4E fg:#ffffff"
-format = '[[ $symbol $branch ](bg:#608B4E fg:#ffffff)]($style)'
+style = "bg:#a6e3a1 fg:#1e1e2e"
+format = '[[ $symbol $branch ](bg:#a6e3a1 fg:#1e1e2e)]($style)'
 
 [git_status]
-style = "bg:#608B4E fg:#ffffff"
-format = '[[($conflicted$deleted$renamed$modified$staged$untracked$ahead_behind )](bg:#608B4E fg:#ffffff)]($style)'
+style = "bg:#a6e3a1 fg:#1e1e2e"
+format = '[[($conflicted$deleted$renamed$modified$staged$untracked$ahead_behind )](bg:#a6e3a1 fg:#1e1e2e)]($style)'
+
+[palettes.catppuccin_mocha]
+rosewater = "#f5e0dc"
+flamingo = "#f2cdcd"
+pink = "#f5c2e7"
+mauve = "#cba6f7"
+red = "#f38ba8"
+maroon = "#eba0ac"
+peach = "#fab387"
+yellow = "#f9e2af"
+green = "#a6e3a1"
+teal = "#94e2d5"
+sky = "#89dceb"
+sapphire = "#74c7ec"
+blue = "#89b4fa"
+lavender = "#b4befe"
+text = "#cdd6f4"
+subtext1 = "#bac2de"
+subtext0 = "#a6adc8"
+overlay2 = "#9399b2"
+overlay1 = "#7f849c"
+overlay0 = "#6c7086"
+surface2 = "#585b70"
+surface1 = "#45475a"
+surface0 = "#313244"
+base = "#1e1e2e"
+mantle = "#181825"
+crust = "#11111b"
