--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,21 +3,21 @@ set -g base-index 1
 setw -g pane-base-index 1
 set-option -g renumber-windows on
 
-bind-key -n F12 if-shell '[ "$(tmux list-panes | wc -l)" = "1" ]' {
-  split-window -h -c "#{pane_current_path}"
-  resize-pane -R 20
-} {
-  select-pane -t 1
-  resize-pane -Z
-}
+# bind-key -n F12 if-shell '[ "$(tmux list-panes | wc -l)" = "1" ]' {
+#   split-window -h -c "#{pane_current_path}"
+#   resize-pane -R 20
+# } {
+#   select-pane -t 1
+#   resize-pane -Z
+# }
 
-bind  -n M-t new-window -c "#{pane_current_path}"
-bind -n M-w kill-window
-bind-key -n M-1 select-window -t 1
-bind-key -n M-2 select-window -t 2
-bind-key -n M-3 select-window -t 3
-bind-key -n M-3 select-window -t 4
-bind-key -n M-3 select-window -t 5
+# bind  -n M-t new-window -c "#{pane_current_path}"
+# bind -n M-w kill-window
+# bind-key -n M-1 select-window -t 1
+# bind-key -n M-2 select-window -t 2
+# bind-key -n M-3 select-window -t 3
+# bind-key -n M-3 select-window -t 4
+# bind-key -n M-3 select-window -t 5
 
 set -g @plugin 'catppuccin/tmux#latest'
 set -g @plugin 'tmux-plugins/tpm'
