--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,13 +3,13 @@ set -g base-index 1
 setw -g pane-base-index 1
 set-option -g renumber-windows on
 
-# bind-key -n F12 if-shell '[ "$(tmux list-panes | wc -l)" = "1" ]' {
-#   split-window -h -c "#{pane_current_path}"
-#   resize-pane -R 20
-# } {
-#   select-pane -t 1
-#   resize-pane -Z
-# }
+bind-key -n F12 if-shell '[ "$(tmux list-panes | wc -l)" = "1" ]' {
+  split-window -h -c "#{pane_current_path}"
+  resize-pane -R 20
+} {
+  select-pane -t 1
+  resize-pane -Z
+}
 
 # bind  -n M-t new-window -c "#{pane_current_path}"
 # bind -n M-w kill-window
